update privacy policy

--- a/app/views/pages/third_parties.html.haml
+++ b/app/views/pages/third_parties.html.haml
@@ -65,6 +65,18 @@
                 = link_to "Intercom", "http://docs.intercom.io/privacy", target: '_blank'
             .span8
               %p - our CRM system, a way for our customer support to keep in touch with users.
+          .row-fluid
+            .span2
+              %p 
+                = link_to "Facebook", "https://www.facebook.com/about/privacy/", target: '_blank'
+            .span8
+              %p - to allow you to login via your Facebook account. Optionally you can use your facebook contacts when inviting people to your group.
+          .row-fluid
+            .span2
+              %p 
+                = link_to "Google", "http://www.google.com/policies/privacy/", target: '_blank'
+            .span8
+              %p - we use Google to log in via your Google account. Optionally you can authorize us to download your contacts when inviting people to your group.
 
 
 
