--- a/app/views/pages/third_parties.html.haml
+++ b/app/views/pages/third_parties.html.haml
@@ -70,13 +70,19 @@
               %p 
                 = link_to "Facebook", "https://www.facebook.com/about/privacy/", target: '_blank'
             .span8
-              %p - to allow you to login via your Facebook account. Optionally you can use your facebook contacts when inviting people to your group.
+              %p - to allow you to login via your Facebook account.
           .row-fluid
             .span2
               %p 
                 = link_to "Google", "http://www.google.com/policies/privacy/", target: '_blank'
             .span8
-              %p - we use Google to log in via your Google account. Optionally you can authorize us to download your contacts when inviting people to your group.
+              %p - we use Google to log in via your Google account. Optionally you can authorize us to download your Google contacts when inviting people to your group.
+          .row-fluid
+            .span2
+              %p 
+                = link_to "Yahoo", "http://www.yahoo.com/privacy", target: '_blank'
+            .span8
+              %p - Optionally you can authorize Loomio to download your Yahoo contacts when inviting people to your group.
 
 
 
