--- a/app/views/motions/_motion.html.haml
+++ b/app/views/motions/_motion.html.haml
@@ -55,7 +55,7 @@
           denominator:  motion.group_size_when_voting
 
   .votes
-    - if motion.voting? && motion.user_has_not_voted?(current_user)
+    - if can?(:vote, motion) && motion.user_has_not_voted?(current_user)
       %h3= t :state_your_position
       .vote-buttons.clearfix
         - Vote::POSITIONS.each do |position|
