pagination + stlyes + search

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -23,5 +23,5 @@
       .action-button= link_to t(:start_new_group), new_group_path, class: 'btn btn-large btn-primary btn-block'
       .intro-desc= t(:start_new_group_hint)
     .span3.actions
-      .action-button= link_to t(:find_a_group), explore_path, class: 'btn btn-large btn-success btn-block'
+      .action-button= link_to t(:"find_a_group"), explore_path, class: 'btn btn-large btn-success btn-block'
       .intro-desc= t(:find_a_group_hint)
