--- a/app/views/explore/_header.html.haml
+++ b/app/views/explore/_header.html.haml
@@ -1,15 +1,13 @@
-.row-fluid
-  .span12.header
-    .row-fluid
-      .span12
-        %h1=link_to t(:"explore.header"), explore_path
-    .row-fluid
-      .span9
-        .category_select
-          %label= t(:"group_form.category")
-          = select_tag :select_category,
-            options_for_select(category_names_and_paths, selected_category_path)
+.row-fluid.header
+  .span5
+    %h1=link_to t(:"explore.header"), explore_path
 
-      .span3
-        = form_tag search_explore_path, method: 'get' do |f|
-          = text_field_tag :query, '', placeholder: t(:'search.placeholder')
+  .span4
+    .category_select
+      %label= t(:"group_form.category")
+      = select_tag :select_category,
+        options_for_select(category_names_and_paths, selected_category_path)
+
+  .span3
+    = form_tag search_explore_path, method: 'get' do |f|
+      = text_field_tag :query, '', placeholder: t(:'search.placeholder')
