--- a/app/views/explore/search.html.haml
+++ b/app/views/explore/search.html.haml
@@ -1,4 +1,9 @@
 = render 'header'
 
-= render 'category', heading: "Search results for '#{@query}'", groups: @groups
-= paginate @groups
+-if @query.present?
+  .row-fluid
+    .span12
+      %h2= t(:"search.header", query: @query)
+      -if @groups.blank?
+        %p= t :"search.no_match"
+= render 'groups', groups: @groups
