--- a/app/views/application/_groups_dropdown.html.haml
+++ b/app/views/application/_groups_dropdown.html.haml
@@ -7,4 +7,4 @@
     - if current_user.show_start_group_button?
       %li.group-item.group-links
         =link_to t(:request_new_group), new_group_path, class: 'new-group'
-        =link_to t(:find_a_group), explore_path, class: 'find-group'
+        =link_to t(:"explore.header"), explore_path, class: 'find-group'
