--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,4 +28,5 @@
       .page-container
         = yield
       = render 'footer_logged_in'
-    = render 'intercom_tracker'
+  = render 'intercom_tracker'
+  = render 'heap_analytics'
