--- a/app/views/marketing/index.html.haml
+++ b/app/views/marketing/index.html.haml
@@ -6,7 +6,7 @@
     :javascript
       if (document.cookie.indexOf("signed_in") >= 0) {window.location.replace("#{dashboard_path}");}
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
-    = stylesheet_link_tag  "marketing"
+    = stylesheet_link_tag  "marketing/splash"
     = csrf_meta_tags
     = render 'social_metadata'
 
