Add keyboard shortcuts to header; add group dropdown search
commit 2695ffe0873f238d285fa4ed086c6de16033972e
Merge: 42d5c6b 90fdf7f
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Sun Aug 3 14:10:46 2014 -0400

    Merge branch 'master' into header-keyboard-shortcuts

commit 42d5c6b974ed7a6d6e0cfb37b4f375b5db1d8fde
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Sun Aug 3 14:09:48 2014 -0400

    Reduce min groups for searching to 10

commit 88e27409cc28955aa4ea0c74d1d19572e67de4ef
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Sun Aug 3 14:09:08 2014 -0400

    Make text search case insensitive

commit 82caeb6ed3f9e0dd64c0128c68d17dda3ac6c2ce
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Tue Jul 29 21:54:04 2014 -0400

    Add keyboard shortcuts to header; Add group dropdown search
capability

--- a/app/views/application/_groups_dropdown.html.haml
+++ b/app/views/application/_groups_dropdown.html.haml
@@ -3,6 +3,9 @@
     %i.fa.fa-group
     %span= t :groups
   %ul.dropdown-menu
+    = text_field :search, :groups, class: 'group-dropdown-search', placeholder: t(:search_for_group)
+    .no-groups-found 
+      = t(:no_groups_found)
     #group-dropdown-items
     - if current_user.show_start_group_button?
       %li.group-item.group-links
