--- a/app/assets/stylesheets/unstructured/_header.css.scss
+++ b/app/assets/stylesheets/unstructured/_header.css.scss
@@ -183,6 +183,19 @@
     .dropdown-menu {
       padding-bottom: 0;
     }
+    .group-dropdown-search {
+      display: none;
+      width: 100%;
+      padding: 1em;
+      margin: 0;
+      box-sizing: border-box;
+      position: relative;
+      bottom: 5px;
+    }
+    .no-groups-found {
+      display: none;
+      padding: 5px 15px;
+    }
   }
 
   /* group dropdown items */
