Allow moving private discussions to public group
commit d62224abc2fd8cc0a0ade5c57f15a148eb2e61ed
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Sun Aug 3 15:15:04 2014 -0400

    Allow moving discussion to group with other admin

commit 1f1e74886bac371c2c6a6f720ad0b9c738112d1e
Merge: 16384b9 90fdf7f
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Sun Aug 3 13:59:27 2014 -0400

    Merge branch 'master' into moving-private-discussions

commit 16384b914594256e298434f4d4d9f85187b304e5
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jul 25 23:33:21 2014 -0400

    Write controller spec for moving discussions

commit e1425711acac68ac7d93e1e0dbe295b705d4f5a8
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Fri Jul 25 22:29:17 2014 -0400

    Only populate destinations when user can move discussion

commit 4107d3f4beeea190323abe13383ca77385e1b796
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Thu Jul 24 22:12:24 2014 -0400

    Fix failing test

commit 852c8d5938e5ea4c87cbcb88274d6e5f904fd733
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Wed Jul 23 01:22:51 2014 -0400

    Whoops! Swap out public for private ids

commit 237d369a1d93d372fe26b7e802981bac703fa043
Author: James Kiesel <james.kiesel@gmail.com>
Date:   Wed Jul 23 01:19:00 2014 -0400

    Support for moving private discussions

--- a/app/assets/stylesheets/unstructured/_discussions.css.scss
+++ b/app/assets/stylesheets/unstructured/_discussions.css.scss
@@ -125,7 +125,7 @@ body.discussions.show {
     margin: 10px 12px 0 44px;
   }
 
-  .warn-move-will-make-private { padding: 0 15px 15px; }
+  .warn-move { padding: 0 15px 15px; }
 
   #options-dropdown {
     font-size: 1.4em;
