put image dependencies into the assets

--- a/app/assets/stylesheets/unstructured/_explore.css.scss
+++ b/app/assets/stylesheets/unstructured/_explore.css.scss
@@ -1,3 +1,5 @@
+//= depend_on default-cover-photo.png
+
 body.explore {
   .page-container {
     /*font-family: 'OpenSans', 'OpenSans', sans-serif;*/
