--- a/app/assets/stylesheets/unstructured/_icons.css.scss
+++ b/app/assets/stylesheets/unstructured/_icons.css.scss
@@ -1,3 +1,21 @@
+//= depend_on 'dot-18.png'
+//= depend_on 'discussion-18.png'
+//= depend_on 'topic-18.png'
+//= depend_on 'hand-abstain-18.png'
+//= depend_on 'hand-block-18.png'
+//= depend_on 'hand-no-18.png'
+//= depend_on 'questionmark-18.png'
+//= depend_on 'hand-yes-18.png'
+//= depend_on 'pie-18.png'
+//= depend_on 'discussion-24.png'
+//= depend_on 'discussion-light-24.png'
+//= depend_on 'pie-24.png'
+//= depend_on "pie-light-24.png"
+//= depend_on 'topic-24.png'
+//= depend_on 'paperclip20.png'
+//= depend_on 'sort-by-alphabet.jpg'
+//= depend_on 'sort-by-alphabet-desc.jpg'
+
 .button-icon{
   background-repeat: no-repeat;
   display: inline-block;
