--- a/app/assets/stylesheets/unstructured/_loomio_theme.css.scss
+++ b/app/assets/stylesheets/unstructured/_loomio_theme.css.scss
@@ -1,3 +1,7 @@
+//= depend_on "logo-orange.png"
+//= depend_on "navbar-logo.png"
+//= depend_on "navbar-logo-beta.jpg"
+
 $pages-background: #F2F1ED;
 $app-background: #DBDBDB;
 $text-on-bg: $mid-grey;
