--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
       =javascript_include_tag 'ie8'
 
     = stylesheet_link_tag    "third_party"
-    = stylesheet_link_tag    "unstructured"
+    = stylesheet_link_tag    "unstructured/index"
     = theme_stylesheet_link_tag
     = javascript_include_tag "application"
     = theme_javascript_include_tag
