--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,6 +1,6 @@
 - set_title @group.name, "", @group.parent
-- cover_photo_url = url_for_image(use_parent_if_blank(@group, :cover_photo), :desktop) #.url(:desktop)
-- logo_url = url_for_image(use_parent_if_blank(@group, :logo), :medium) #.url(:medium)
+- cover_photo_url = use_parent_if_blank(@group, :cover_photo).url(:desktop)
+- logo_url = use_parent_if_blank(@group, :logo).url(:medium)
 
 .group-heading{style: "background-image: url(#{image_path 'cover-photo-gradient.png'}), url('#{cover_photo_url}')"}
   = render 'application/flash_messages', :flash => flash, :on_landing_page => false
