add Heap to Third Parties page

--- a/app/views/pages/third_parties.html.haml
+++ b/app/views/pages/third_parties.html.haml
@@ -61,6 +61,12 @@
               %p -used to send emails from the app. 
           .row-fluid
             .span2
+              %p
+                = link_to "Heap Analytics", "https://heapanalytics.com/privacy", target: '_blank'
+            .span8
+              %p - to measure how people are interacting with the software and identify points of the user experience that can be improved.
+          .row-fluid
+            .span2
               %p 
                 = link_to "Intercom", "http://docs.intercom.io/privacy", target: '_blank'
             .span8
