--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -7,6 +7,9 @@
       = f.input :email
       = f.input :selected_locale, :collection => LocalesHelper::LANGUAGES, include_blank: false, label: t(:'simple_form.labels.user.language_preference')
       = f.submit :class => "btn btn-info btn-large", id: "profile-submit", :data => {:disable_with => t("helpers.submit.user.update")}
+.row
+  .span4
+    = link_to "Change your password", change_password_path, id: 'change-password'
 
 .row
   .span6
