--- a/app/views/thread_mailer/mentioned.text.haml
+++ b/app/views/thread_mailer/mentioned.text.haml
@@ -8,4 +8,4 @@
 = t("email.view_comment")
 = discussion_url(@discussion)+"#comment-#{@comment.id}"
 \
-= render 'unsubscribe_link_text'
+= render 'user_mailer/unsubscribe_link_text'
