--- a/app/views/thread_mailer/motion_closing_soon.html.haml
+++ b/app/views/thread_mailer/motion_closing_soon.html.haml
@@ -30,4 +30,4 @@
               -if vote.statement.present?
                 = vote.statement
 
-    =render 'unsubscribe_link'
+    =render 'user_mailer/unsubscribe_link'
