--- a/app/views/user_mailer/missed_yesterday.html.haml
+++ b/app/views/user_mailer/missed_yesterday.html.haml
@@ -1,7 +1,7 @@
 = render '/application/mailer_doctype'
 %html
   %head
-    = stylesheet_link_tag 'missed_yesterday'
+    = stylesheet_link_tag 'thread_mailer'
   %body
     .everything
       %p
