--- a/app/views/user_mailer/missed_yesterday/_discussion.html.haml
+++ b/app/views/user_mailer/missed_yesterday/_discussion.html.haml
@@ -10,11 +10,11 @@
         = render_email_plaintext discussion.description
 
   - if motion = discussion.motions.voting_or_closed_after(@time_start).first
-    = render 'user_mailer/missed_yesterday/motion', motion: motion
+    = render 'thread_mailer/motion', motion: motion
 
   .activity-feed
     - discussion.items.where('created_at > ?', @time_start).order('created_at').each do |item|
       - next unless ['new_comment', 'new_vote' ].include? item.kind
-      = render "user_mailer/missed_yesterday/#{item.kind}", item: item
+      = render "thread_mailer/#{item.kind}", item: item
 
   %p= link_to t(:"email.reply_to_this_discussion"), discussion_url(discussion)
