--- a/app/views/thread_mailer/_new_vote.html.haml
+++ b/app/views/thread_mailer/_new_vote.html.haml
@@ -1,19 +1,11 @@
 - vote = item.eventable
 - position = vote.position
 - ditem = DiscussionItems::NewVote.new(item.eventable)
-- case position
-- when 'yes'
-  - src = "https://loomio-uploads.s3.amazonaws.com/themes/pages_logos/000/000/005/original/hand-yes-18.png?1403064691"
-- when 'no'
-  - src = "https://loomio-uploads.s3.amazonaws.com/themes/app_logos/000/000/005/original/hand-no-18.png?1403064711"
-- when 'block'
-  - src = "https://loomio-uploads.s3.amazonaws.com/themes/pages_logos/000/000/004/original/hand-block-18.png?1403064137"
-- when 'abstain'
-  - src = "https://loomio-uploads.s3.amazonaws.com/themes/app_logos/000/000/004/original/hand-abstain-18.png?1403064137"
+
 %table
   %tr
     %td.icon.activity-icon
-      %img{src: src}
+      %img{src: vote_icon_paths_helper(position)}
     %td.content
       %b= vote.author.name
       - past_tense_position = I18n.t("position_verbs.past_tense.#{position}")
