move old motion mails out of thread mailer

--- a/app/views/user_mailer/motion_created.html.haml
+++ b/app/views/user_mailer/motion_created.html.haml
@@ -14,7 +14,7 @@
       %br
 
     %h4.have-say-title= t(:"help.have_your_say")
-    = render 'vote_buttons', motion: @motion
+    = render 'thread_mailer/vote_buttons', motion: @motion
 
     %br
     = render 'user_mailer/unsubscribe_link'
