add thread mailer for new motion

--- a/app/views/thread_mailer/new_comment.text.haml
+++ b/app/views/thread_mailer/new_comment.text.haml
@@ -1,5 +1,2 @@
 = @comment.body
-\
-\---
-= t(:"email.thread_mailer.footer.comment") + " " + t(:"email.thread_mailer.footer.link_text") + ":"
-=comment_url_helper(@comment)
+= render "footer", link: comment_url_helper(@comment)
