--- a/app/views/thread_mailer/_vote_buttons.html.haml
+++ b/app/views/thread_mailer/_vote_buttons.html.haml
@@ -1,17 +1,15 @@
-- utm_hash = @utm_hash.merge utm_campaign: 'vote'
-
 = link_to t(:"position_verbs.yes").capitalize,
-          new_motion_vote_url( motion, utm_hash.merge(position: 'yes')),
+          new_motion_vote_url( motion, position: 'yes'),
           class: 'yes-link'
 = " - "
 = link_to t(:"position_verbs.abstain").capitalize,
-          new_motion_vote_url( motion, utm_hash.merge(position: 'abstain')),
+          new_motion_vote_url( motion, position: 'abstain'),
           class: 'abstain-link'
 = " - "
 = link_to t(:"position_verbs.no").capitalize,
-          new_motion_vote_url( motion, utm_hash.merge(position: 'no')),
+          new_motion_vote_url( motion, position: 'no'),
           class: 'no-link'
 = " - "
 = link_to t(:"position_verbs.block").capitalize,
-          new_motion_vote_url( motion, utm_hash.merge(position: 'block')),
+          new_motion_vote_url( motion, position: 'block'),
           class: 'block-link'
