--- a/app/views/thread_mailer/new_comment.html.haml
+++ b/app/views/thread_mailer/new_comment.html.haml
@@ -1,4 +1,2 @@
 = @rendered_comment_body
-%hr
-= t :"email.thread_mailer.footer.comment"
-= link_to t(:"email.thread_mailer.footer.link_text"), comment_url_helper(@comment)
+= render "footer", link: comment_url_helper(@comment)
