--- a/app/views/user_mailer/motion_created.html.haml
+++ b/app/views/user_mailer/motion_created.html.haml
@@ -10,7 +10,7 @@
       = @rendered_motion_description
 
     %p
-      = t(:"email.proposal_closing_soon.closes_on") + ' ' + @motion.closing_at.in_time_zone(TimeZoneToCity.convert @user.time_zone).strftime('%A %-d %b - %l:%M%P')
+      = t(:"email.proposal_closing_soon.closes_on") + ' ' + motion_closing_time_for(@user)
       %br
 
     %h4.have-say-title= t(:"help.have_your_say")
