--- a/app/views/thread_mailer/new_motion.text.haml
+++ b/app/views/thread_mailer/new_motion.text.haml
@@ -1,4 +1,4 @@
-= t(:"email.new_motion_created.context", author: @motion.author_name, group_full_name: @group.full_name)
+= t(:"email.thread_mailer.new_motion", who: @motion.author_name)
 \
 = @motion.name
 \
